--- a/views/admin/listProducts.ejs
+++ b/views/admin/listProducts.ejs
@@ -5,8 +5,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
     <title>Admin</title>
     <link href="/css/adminStyles.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"
@@ -17,7 +15,7 @@
 
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Quản trị</a><button class="btn btn-link btn-sm order-1 order-lg-0"
+        <a class="navbar-brand" href="/admin">Quản trị</a><button class="btn btn-link btn-sm order-1 order-lg-0"
             id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button><!-- Navbar Search-->
         <div class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
 
@@ -30,7 +28,7 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                     <a class="dropdown-item" href="#">Thông tin</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="login.html">Đăng xuất</a>
+                    <a class="dropdown-item" href="/admin/logout">Đăng xuất</a>
                 </div>
             </li>
         </ul>
@@ -68,8 +66,8 @@
                         <div class="collapse" id="collapse-2" aria-labelledby="headingTwo"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="layout-static.html">Danh sách</a>
-                                <a class="nav-link" href="layout-sidenav-light.html">Thêm mới</a>
+                                <a class="nav-link" href="/admin/cates/list">Danh sách</a>
+                                <a class="nav-link" href="/admin/cates/create">Thêm mới</a>
                             </nav>
                         </div>
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse-3"
@@ -81,8 +79,8 @@
                         <div class="collapse" id="collapse-3" aria-labelledby="headingThree"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="layout-static.html">Danh sách</a>
-                                <a class="nav-link" href="layout-sidenav-light.html">Thêm mới</a>
+                                <a class="nav-link" href="/admin/users/list">Danh sách</a>
+                                <a class="nav-link" href="/admin/users/create">Thêm mới</a>
                             </nav>
                         </div>
 
@@ -100,7 +98,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/admin">Admin</a></li>
-                            <li class="breadcrumb-item"><a href="#">Sản Phẩm</a></li>
+                            <li class="breadcrumb-item"><a href="/admin/products/list">Sản Phẩm</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Danh sách</li>
                         </ol>
                     </nav>
@@ -108,6 +106,7 @@
                         <thead>
                             <tr>
                                 <th>Name</th>
+                                <th>Image</th>
                                 <th>Description</th>
                                 <th>Delete</th>
                             </tr>
@@ -162,6 +161,12 @@
                         data: "name",
                         render: function (data, type, product) {
                             return "<a href='#'>" + product.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "img",
+                        render: (data, type, product) => {
+                            return `<img src="/${data}" width="200" alt="${product.name}">`;
                         }
                     },
                     {
