--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -5,28 +5,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Products</title>
     <link rel="stylesheet" href="../css/style.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap&subset=vietnamese" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="/css/styleHome.css">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Product</h1>
-        <div class="products">
-            <% products.forEach(product => { %>
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src= '<%= product.img %>' alt="Card image cap">
-                    <div class="card-body">
-                    <h5 class="card-title"> <%= product.name %> </h5>
-                    <p class="card-text"> <%= product.des %> </p>
-                    <a href="#" class="btn btn-primary">Add to cart</a>
+    <div class="wrapper">
+        <div class="headder">
+            <div class="menu">
+                <nav class="navbar navbar-expand-lg navbar-light bg-new">
+                    <div class="container">
+                        <a class="navbar-brand logo" href="/">Shopp</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <div class="search-pr">
+                                <form action="GET">
+                                    <div class="form-group">
+                                        <input type="search" name="search" id="search" class="form-control">
+                                    </div>
+                                    <button type="button" class="btn btn-outline-light btn-search">
+                                        <i class="fa fa-search"></i>
+                                        <span>Search</span>
+                                    </button>
+                                </form>
+                            </div>
+
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/product">
+                                        <i class="fa fa-product-hunt"></i>
+                                        <span>Product</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">
+                                        <i class="fa fa-bell"></i>
+                                        <span>Thông báo của tôi</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            <% }); %>
-            
+                </nav>
+            </div>
         </div>
-    </div>
+        <div class="body">
+            <div class="container">
+                <div class="title">
+                    <h1>Danh Muc</h1>
+                </div>
+                <div class="products">
+                    <% products.forEach(product => { %>
+                        <div class="card product" style="width: 14rem;">
+                            <div class="pr-avatar">
+                                <img class="card-img-top" src= '<%= product.img %>' alt="Card image cap">
+                            </div>
+                            <div class="card-body">
+                            <h5 class="card-title"> <%= product.name %> </h5>
+                            <p class="card-text"> <%= product.des %> </p>
+                            <a href="#" class="btn btn-primary">Add to cart</a>
+                            </div>
+                        </div>
+                    <% }); %>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="fooder"></div>
+    
     
 </body>
 
