--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -166,10 +166,18 @@
                                     in</button>
                                 <hr class="my-4">
                             </form>
+
+                            <div class="loginGoogle text-center" style="width: 100%;">
+                                <a href="/auth/google" style="width: 100%;">
+                                    <button class="btn btn-danger" style="width: 100%;">Google+</button>
+                                </a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </body>
 </body>
